--- a/index.html
+++ b/index.html
@@ -3346,7 +3346,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div style="display: inline-block;">
   
                         <p>-</p>
-                        <a> Esse Cockpit de despesas abaixo faz parte de nossos aceleradores que podem ajudar em diversas áreas de sua empresa e vale a pena conferir quais podem ajuda-los a atingir um maior fast time to value.</a>
+                        <a> Esse Cockpit de despesas abaixo faz parte de nossos aceleradores que podem ajudar em diversas áreas de sua empresa e vale a pena conferir quais podem ajuda-los a atingir resultados mais rápidos.</a>
                         <p>-</p>
                         <div id="vizContainer1"></div>
                     </div>
@@ -3412,7 +3412,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div style="text-align: center;">
                 <div style="display: inline-block;">
                     <p>-</p>
-                    <p> O dashboard a seguir é um exemplo de webinar que utilizamos no inicio da jornada para criação de cultura de dados. Tem muita informação relevante para que voce possa conhecer um pouco mais sobre a plataforma Tableau e como te ajudamos a construir cultura de dados</>
+                    <p> O dashboard a seguir é um exemplo de webinar que utilizamos no inicio da jornada para criação de cultura de dados. </p>
+                        <p>Tem muita informação relevante para que voce possa conhecer um pouco mais sobre a plataforma Tableau e como te ajudamos a construir cultura de dados</>
                         <p>-</p>
                 <div id="vizContainer10"></div>
                 </div>
